Revert "Fix the alignment of login/sign-up buttons"
This reverts commit 277144b914fa3e69315f90e10b078d339a17e425.

--- a/resources/assets/css/outer/outer.less
+++ b/resources/assets/css/outer/outer.less
@@ -88,6 +88,7 @@
     .login-link.btn {
       width: 110px;
       height: 40px;
+      margin: 15px;
 
       border-radius: 20px;
     }
